getOtp/service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: getotpservice
spec: 
  selector: 
    app: getotp 
  ports: 
  - protocol: TCP 
    port: 80 
    targetPort: 8180
