getOtp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: getotp
spec:
  host: demo-argocd.apps.cluster-zhwqt.dynamic2.redhatworkshops.io
  path: /getotp
  port:
    targetPort: 8180
  to:
    kind: Service
    name: getotpservice
    weight: 100
